--- a/Второе задание/oblako.CSS
+++ b/Второе задание/oblako.CSS
@@ -1,7 +1,7 @@
 body {
     background: #FFF;
     margin: 0 auto;
-    max-width: 960%;
+    max-width: 100%;
     max-height: 960px;
     font-family: Arial, sans-serif;
     font-size: 14px;
@@ -25,26 +25,30 @@ body {
     border-radius: 10% 10% 0 0;
 }
 #cent {
+    display: inline-block;
     background: rgba(13, 151, 13, 0.637);
     width: 100%;
-    height: 500px;
-    
+    height: 200px;    
 }
 .niz {
+    display: inline-block;
     background: rgba(198, 201, 13, 0.555);
     width: 33%;
-    height: 260px;
+    height: 200px;
     float: left;
 }
 .niz1 {
+    
+    display: inline-block;
     background: rgba(198, 201, 13, 0.555);
-    width: 34%;
-    height: 260px;
+    width: 33%;
+    height: 200px;
     float: center;
 }
 .niz2 {
+    display: inline-block;
     background: rgba(198, 201, 13, 0.555);
     width: 33%;
-    height: 260px;
+    height: 200px;
     float: right;
 }
