--- a/Второе задание/zd4.css
+++ b/Второе задание/zd4.css
@@ -7,34 +7,39 @@ body {
     font-size: 14px;
     }
 
-.head{
+header {
     background: rgb(6, 215, 243);
     height: 10%;
-    width: 100%;
-    opacity: .1;
-    transition: 0.6s linear;
+    width: 100%;    
+}
+header:hover{
+    background: rgba(0, 255, 64, 0.568);
+    opacity: 0.8; 
 }
 .one {
     display: inline-block;
     position: relative;
     height: 8%;
-    width: 49%; 
+    width: 49%;
+    z-index: -1; 
 }
 .two {
     display: inline-block;
-    
+    position: relative;    
     height: 8%;
-    width: 49%;   
+    width: 49%;
+    z-index: -1;   
 }
 .blok {
     display: inline-block;
     background: rgba(198, 201, 13, 0.555);
     width: 34%;
-    height: 500px;
+    height: 400px;
     margin-left: 15%;
     border-left-style: dotted;
     bottom: 50px;
     position: relative;
+    top: -48px;  
     
        
 }
@@ -42,7 +47,7 @@ body {
     display: inline-block;
     background: rgba(198, 201, 13, 0.555);
     width: 34%;
-    height: 500px;   
+    height: 400px;   
     margin-right: 15%;
     border-right-style: dotted;
     bottom: 50px;
@@ -51,9 +56,17 @@ body {
 }
 .futer {
     top:50px;
-    background: rgba(6, 243, 211, 0.404);   
+    background: rgb(6, 243, 211);   
     height: 15%;
     width: 100%;
     border-radius: 25px 25px 0 0;
     font-size: 20px;
+    opacity: 0.5; 
+}
+.futer:hover {
+    background: rgb(6, 243, 211); 
+    opacity: 1;     
+}
+p{
+    margin-left: 50px;
 }
