--- a/Третье задание/style.css
+++ b/Третье задание/style.css
@@ -192,38 +192,175 @@ header .logo{
     background-repeat: no-repeat;
     height: calc(100vh - 100px);
     max-height: 700px;
-    text-align: center;       
-    /*background: rgba(50, 60, 78, 0.63);   Не знаю почему но фон не становится прозрачным*/
+    text-align: center; 
+    margin: 0 auto;          
+        
+}
+.container5 .fon{
+
+    opacity: 0.85;
+    background: rgba(50, 60, 78, 1);
+    height: calc(100vh - 100px);
+    max-height: 700px;
+     
+    
 }
 
 .container5 H3{
     color: #ffffff;
     font-size: 41px;
-    padding-top: 85px;
+    padding-top: 6vh;
 }
 
 .container5 p{
-    color: #2d374b;
+    color: #929294;
     font-size: 15px;
-    padding-top: 30px;
+    padding-top: 3vh;
+    padding-bottom: 5vh;
 }
 
 .container5 form .inlog{
     display: block;
-    width: 555px;
-    height: 65px;
-    color: #525864;  
-    margin-top: 22px;
+    width: 560px;
+    height: 6vh;    
+    margin-top: 3vh;
     border: 1px solid #999999;
     border-radius: 3px;
+    margin: 0 auto;
+    background-color: transparent;        
 }
+
+
 
 .container5 form .mess{
     width: 555px;
-    height: 160px;
-    margin-top: 22px;
+    height: 22vh;
+    margin-top: 3vh;
     border: 1px solid #999999;
     border-radius: 3px;
+    background-color: transparent;
+    font-size: 15px;
 }
 
-/*555px 65px  22px    560 160*/
+.container5 form .text{
+    display: inline-block;
+    position: relative;
+    color: #e0e1e3;
+    left: -130px;
+    top: -6vh;
+    font-size: 15px;    
+    border-radius: 2px;
+}
+
+.container5 form .sen{
+    display: inline-block;
+    position: relative;
+    width: 140px;
+    height: 50px;
+    font-size: 18px;
+    border: 1px solid #189ae9;
+    color: #ffffff;
+    left: 127px;
+    top: -6vh;
+    background-color: transparent;
+    margin: 0 auto;
+    border-radius: 3px;  
+}
+
+.container5 form .sen:hover{    
+    background: #15a4fa;
+    font-size: 18px;
+    border-radius: 3px;
+}
+footer{        
+    height: 90px;
+    background-color: #f6f9f9;
+}
+
+footer p{    
+    font-size: 15;
+    color: #999999;            
+}
+
+footer .foooterbar{
+    display: inline-block;
+    width: 100%;
+    height: 60;
+    margin: 0 auto;
+    padding-top: 40px;     
+}
+
+footer .footeleft{
+    text-align: left;
+}
+
+footer .footeright{
+    margin-top: -30px ;
+    text-align: right;    
+}
+
+footer .fb{
+    display: inline-block;
+    position: relative;
+    height: 40px;
+    width: 40px;
+    border-radius: 2px;
+    background-color: #15a4fa;
+    text-align: center;
+    line-height: 40px;
+}
+
+
+footer .fb:hover{
+    background-color: #3b5998;
+
+}
+
+footer .twit{
+    display: inline-block;
+    position: relative;
+    height: 40px;
+    width: 40px;
+    border-radius: 2px;
+    background-color: #15a4fa;
+    text-align: center;
+    line-height: 40px;
+}
+
+footer .twit:hover{
+    background-color: #55acee;
+}
+
+footer .googl{
+    display: inline-block;
+    position: relative;
+    height: 40px;
+    width: 40px;
+    border-radius: 2px;
+    background-color: #15a4fa;
+    text-align: center;
+    line-height: 40px;
+}
+
+footer .googl:hover{
+    background-color: #dd4b39;
+}
+
+footer .in{
+    display: inline-block;
+    position: relative;
+    height: 40px;
+    width: 40px;
+    border-radius: 2px;
+    background-color: #15a4fa;
+    text-align: center;
+    line-height: 40px;
+}
+
+footer .in:hover{
+    background-color: #0976b4;
+}
+
+
+/*555px 65px  22px    560 160 - 140 50 <<<<<<<<<<<<9-15>>>>>>>>>>>>>>>>>
+padding margin*/
