--- a/Третье задание/style.css
+++ b/Третье задание/style.css
@@ -192,6 +192,58 @@ header .logo{
    margin: 0 auto;
 }
 
+.flex{
+    display: flex;
+    flex-wrap: wrap; 
+    align-items: flex-start;   
+    height: 900px;
+    background-color: rgb(246, 249, 249);    
+}
+
+.flex h3{  
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;  
+    width:100%;
+    font-size: 41px;
+    height: 110px;    
+}
+
+.flex p{
+    display: flex;
+    align-items: flex-end;
+    justify-content: center; 
+    font-size:15px;
+    width:100%;
+    margin-bottom: 50px;
+    color: rgb(152, 152, 152);;       
+}
+
+.flex .flex2{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 100px;
+    margin-right: 100px;
+    justify-content: space-between;           
+    height: 600px;
+    margin-bottom: 50px;
+}
+
+.flex .flex2 .hov{
+    height: 260px;
+    width: 350px;
+    z-index: -1;     
+} 
+
+
+.flex .flex2 div:hover{
+    background-color: rgb(36, 166, 245);
+    height: 260px;
+    width: 350px;  
+    z-index: +1;
+}
+
+
 .container5{
     display: block;    
     background-image: url(./images/Layer\ 36.png);
