--- a/Пятое задание/style.css
+++ b/Пятое задание/style.css
@@ -47,7 +47,6 @@ table {
 	border-spacing: 0;
 }
 
-/* end reset css*/
 
 .wrapper{
     max-width: 1920px;
@@ -63,7 +62,7 @@ table {
 
 header{
     height: 140px;
-    background-color: #ebecee;    
+    background-color: #ebecee;
 }
 
 header .menu ul li a{
@@ -108,10 +107,11 @@ header .menu{
 }
 
 header .btn{
-    margin-left: 4%;
     position: relative;
     top: -15px;
+    margin-left: 4%;
 }
+
 
 .container2{    
     background-image: url('./image/font-top.png');
@@ -153,22 +153,27 @@ section a{
     background-color: #ffffff;
 }
 
-.container3 h4{
+.container3 div{
+    width: 380px;
+    margin-top:45px;
+}
+
+.container3 .zag3{
     display: flex;
     font-size: 30px;
     font-weight: 300;
-    color: #141311;
+    color: #333333;
     padding-top: 100px;
     width: 100%;
     justify-content: center;
     font-family: 'Ubuntu', sans-serif;
 }
 
-.container3 p{
+.container3 .text3{
     display: flex;
     font-size: 14px;
     font-weight: 300;
-    color: #333333;
+    color: #696969;
     padding-top: 40px;
     width: 100%;
     text-align: center;
@@ -176,37 +181,268 @@ section a{
     font-family: 'Ubuntu', sans-serif;
 }
 
-.container3 div{
-    display: flex;        
-    width: 30%;
-    margin-top:45px;
-    justify-content: center;  
-    align-items: center;
+.container3 .kvad2{
+display: flex;
+justify-content: center;
+align-items: center;
+height: 260px;   
+width: 380px;
+background-image: url('./image/kvad2.png');
+background-repeat: no-repeat;
 }
 
-
-.container3 div .krug{
-    display: flex; 
-    width: 120px;
-    height: 120px;
-    background-color: lawngreen;
-}
-
-.container div h4{
+.container3 .zag{    
     font-size: 22px;
     font-weight: 300;
     color: #333333;
     font-family: 'Ubuntu', sans-serif;
+    text-align: left;
+    margin-right: 5%;
+    margin-left: 10%;
+    margin-top: 30px;    
+    display: block;
 }
 
-.container div p{
+.container3 .text{
     font-size: 14px;
     font-weight: 300;
     color: #333333;
     font-family: 'Nunito', sans-serif;
+    text-align: left;
+    margin-right: 5%;
+    margin-left: 10%;
+    margin-bottom: 140px;
+    margin-top: 25px;
 }
+
+.container4{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.container4 .item6{
+    background-image: url('./image/image3.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    grid-column: 3/4;
+    grid-row: 2/4;
+}
+
+.container4 .item7{
+    background-image:url('./image/image4.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+
+.container4 .item span, .container4 .item6 span, .container4 .item7 span{
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    font-size:30px;
+    color: #141311;
+    width:50%;
+    display: block;
+    margin-left: 25%;
+    margin-top: 20%;
+}
+
+.container4 .item i, .container4 .item6 i, .container4 .item7 i{
+    width: 35px;
+    height: 2px;
+    display: block;
+    background-color: #000000;
+    margin-left: 25%;
+    margin-top: 12px;
+    margin-bottom: 27px;
+}
+
+.container4 .item p, .container4 .item6 p, .container4 .item7 p{
+    font-family: 'Nunito', sans-serif;
+    font-family: 300;
+    font-size: 14px;
+    color: #333333;
+    margin-left: 25%;    
+    width: 50%;
+}
+
+.container4 .item img{
+    max-width: 100%;
+}
+
+.container4 .item7 span{
+    margin-left: 12.5%;
+    margin-top: 12%;
+}
+
+.container4 .item7 i{
+    margin-left: 12.5%;       
+}
+
+.container4 .item7 p{
+    margin-left: 12.5%;
+    margin-top: 12px; 
+    width: 25%;
+}
+
+.container4 .item6 span{
+    color: #fff;
+    margin-top: 80%;
+}
+
+.container4 .item6 i{
+    background-color: #fff;       
+}
+
+.container4 .item6 p{
+    color: #fff;
+}
+
+.container7{
+    background-color: #e8e9ea;    
+}
+
+.container7 h2{
+    font-size: 48px;
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    padding-top: 140px;
+    margin-bottom: 70px;
+}
+
+.container7 .grids{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
+    color: #000000;
+}
+
+.container7 .grids .item1{
+    background-image:url('./image/image5.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    grid-column: 1/3;
+    grid-row: 1/3;   
+    height: 600px; 
+}
+
+.container7 .grids .item1 span{
+    display: flex;
+    justify-content: center;
+    color: #dee0e0;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    font-size: 30px;
+    margin-left:25%;
+    margin-top: 250px;    
+}
+
+.container7 .grids .item1 div{
+    display: flex;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    font-size: 11px;
+    justify-content: center;
+    margin-top: 35px;    
+}
+
+.container7 .grids .item1 p{
+    color: #bab8b6;    
+    margin-right: 5px;
+}
+
+.container7 .grids h5{
+    display: flex;
+    /*flex-wrap: wrap;*/
+    justify-content: center;
+    align-items: center;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    font-size: 10px;
+    color: #ffffff;
+    background-color: #8d7431;
+    height: 25px;
+    width: 94px;
+    border-radius: 10px;    
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+.container7 .grids .item2 div{
+    background-image:url('./image/image6.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 205px;
+    width: 100%;
+    display: flex;
+}
+
+.container7 .grids .item3 div{
+    background-image:url('./image/image7.png');
+    background-size: contain;
+    background-repeat: no-repeat;    
+    height: 205px;
+    width: 100%;
+    display: flex;
+}
+
+.container7 .grids .item4 div{
+    background-image:url('./image/image8.png');
+    background-size: contain;
+    background-repeat: no-repeat;    
+    height: 205px;
+    width: 100%;
+    display: flex;
+}
+
+.container7 .grids .item5 div{
+    background-image:url('./image/image9.png');
+    background-size: contain;
+    background-repeat: no-repeat;    
+    height: 205px;
+    width: 100%;
+    display: flex;
+}
+
+.container7 p{
+    color: #333333;
+    font-size: 18;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+}
+
+.container7 .knopka{    
+    display: flex;
+    justify-content: center;
+    height: 60px;
+    width: 270px;
+    border-radius: 30px;
+    background-color: #ffffff;
+    margin: 0 auto;
+    margin-top: 60px;
+    margin-bottom: 115px;
+}
+
+.container7 .niz{    
+    font-size: 14px;    
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    color: #333333;
+}
+
+
+270 205
 
 38
 730
 
 375 260
+.kontainer4
