--- a/Пятое задание/style.css
+++ b/Пятое задание/style.css
@@ -197,16 +197,21 @@ header .btn{
     height: 260px;   
     width: 380px; 
     margin: 0 auto;
+}
+
+.container3 .flexkul .kvad2 .kvad21 span{    
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.container3 .flexkul .kvad2 .kvad21 img{
+.container3 .flexkul .kvad2 .kvad21 span{    
     opacity: 0;
 }
 
-.container3 .flexkul .kvad2 .kvad21 img:hover{
+.container3 .flexkul .kvad2 .kvad21 span:hover{
     opacity: 1;
 }
 
