--- a/Пятое задание/style.css
+++ b/Пятое задание/style.css
@@ -180,14 +180,8 @@ header .btn{
 .container3 .flexkul{
     display: flex;
     justify-content: space-around;
-}
-/*
-.container3 div .Kvad .Kvad2{
-    width: 380px;
-}*/
-
-.container3 .kvad2{
-
+    
+    
 }
 
 .container3 .kvad2 .kvad21{
@@ -197,6 +191,9 @@ header .btn{
     height: 260px;   
     width: 380px; 
     margin: 0 auto;
+}
+.container3 .kvad{
+    width: 380px;
 }
 
 .container3 .flexkul .kvad2 .kvad21 span{    
@@ -323,6 +320,195 @@ header .btn{
     color: #fff;
 }
 
+.container5{
+    margin-top: 220px;
+    margin-bottom: 220px;
+}
+.container5 .planshet{
+    display: block;
+    margin-top: -615px;
+    margin-left: -5px;
+}
+/*214-345     98-144*/
+.container5 .phone .bel{
+    display: flex;
+    align-items: center;
+    flex-direction: column; 
+    background-color: #ffffff;
+    height: 345px;
+    width: 213px;
+    margin-top: -430px;
+    margin-left: -6px;
+}
+.container5 .bar{
+    flex
+}
+.container5 .phone .bel .verx_phone{
+    height: 15px;
+    margin-bottom: 23px;
+}
+.container5 .phone .bel .center_phone{    
+    height: 144px;
+    width: 98px;  
+}
+.container5 .phone .text1{    
+    font-size: 12px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 500;
+    text-align: center;
+}
+.container5 .phone .linia{      
+    display: flex;  
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+.container5 .phone .line{   
+    height: 1px; 
+    width: 45px;
+    background-color: #000000;
+}
+.container5 .phone .line2{ 
+    height: 1px; 
+    width: 100px;
+    background-color: #e8eaf1;
+}
+.container5 .phone .text{      
+    font-size: 9px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300; 
+    margin-left: -115px;    
+}
+.container5 .phone .text0{      
+    font-size: 9px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300; 
+    margin-left: -120px;    
+}
+
+.container5 .right_content h4{
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    font-size: 48px;
+    color: #000000;
+    margin-top: -80px;
+}
+.container5 .right_content p{
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    font-size: 24px;
+    color: #000000;
+    margin-top: 45px;
+    margin-bottom: 65px; 
+}
+
+.container5 .right_content .right_icon svg{
+    color: #cba234;
+    font-size: 55px;
+    text-align: center;    
+    margin-bottom: 105px;
+}
+.container5 .right_content .right_text span{
+    color: #000000;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+}
+.container5 .right_content .right_text{
+    margin-left: 20px;
+}
+.container5 .right_content .right_text p{
+    color: #333333;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+    margin-top: 28px;
+    margin-bottom: 55px;
+}
+.container5 .right_text .knopka{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 270px;
+    height: 60px;
+    background: #e5e1e1;    
+    color: #333333;
+    border-radius: 25px;
+    margin-left: -100px;
+}
+.container5 .right_text .knopka a{
+    color: #333333;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    font-size: 14px;    
+}
+
+.container6{
+    background-image:url('./image/phone6.png');
+    height: calc(100vh - 140px);
+    background-repeat: no-repeat;
+    background-position-x: 100%;
+    background-size: 100%;
+    max-height: 1080px;
+    width: 100% ;
+    min-height: 1000px;
+    text-align: center;
+
+}
+
+.container6 .verx_content h4{
+    color: #ffffff;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    font-size: 48px;
+    margin-top: 220px;
+    margin-bottom: 120px;
+}
+.container6 .center_content .dollar{
+    font-size: 30px;    
+    margin-top: 23px;    
+}
+.container6 .center_content .bax{
+    color:  #c89d28;
+    font-size: 80px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+
+}
+.container6 .center_content h5{
+    color:  #fcfcfc;
+    font-size: 22px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;    
+    margin-bottom: 40px;
+}
+.container6 .center_content p{
+    color:  #979797;
+    font-size: 14px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    margin-bottom: 60px;
+}
+.container6 .center_content .knopka{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fcfcfc;
+    width: 210px;
+    height: 60px;
+    border-radius: 30px; 
+    text-align: center;  
+    margin: 0 auto;
+}
+.container6 .center_content .knopka p{
+    color:  #333333;
+    font-size: 14px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+}
+
 .container7{
     background-color: #e8e9ea;  
     padding-bottom: 110px;
@@ -346,7 +532,7 @@ header .btn{
     margin: 0 auto;
     grid-column-gap: 25px;
     grid-row-gap: 25px;
-    color: #000000;
+    color: #000000;    
 }
 
 .container7 .grids .item1{
@@ -384,8 +570,7 @@ header .btn{
 }
 
 .container7 .grids h5{
-    display: flex;
-    /*flex-wrap: wrap;*/
+    display: flex;    
     justify-content: center;
     align-items: center;
     font-family: 'Ubuntu', sans-serif;
@@ -462,6 +647,203 @@ header .btn{
     font-weight: 700;
     color: #333333;
 }
+
+.container8{
+    margin-top: 200px;
+    margin-bottom: 200px;
+}
+
+.container8 .left_content{
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    color: #000000;
+}
+
+.container8 .left_content h4{    
+    font-size: 30px;    
+    font-weight: 300;
+    margin-bottom: 22px;
+}
+
+.container8 .left_content p{    
+    font-size: 16px;
+}
+
+.container8 .left_content p .in_weight{    
+   font-weight: 500;
+}
+
+.container8 .left_icons svg{
+    color: #cba234;
+    font-size: 47px;
+    margin-bottom: 130px;
+    margin-left: 20px;
+    text-align: center;
+}
+
+.container8 .left_icons svg:first-child{
+    margin-top: 15px;
+}
+
+.container8 .right_text{
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.container8 .right_text span{
+    font-weight: 400;
+    color: #000000;
+    font-size: 22px;
+}
+
+.container8 .right_text p{
+    font-weight: 300;
+    color: #333333;
+    font-size: 14px;
+    padding-top: 30px;
+    height: 130px;
+}
+
+
+
+
+/*-------------------АДАПТАЦИЯ--------------------*/
+
+@media(max-width: 1800px){
+    header .menu{
+        margin-left: 55%;
+    }
+}
+
+@media(max-width: 1600px){
+    header .menu{
+        margin-left: 50%;
+    }
+}
+
+@media(max-width: 1400px){
+    header .menu{
+        margin-left: 43%;
+    }
+}
+
+@media(max-width: 1250px){
+    header .menu{
+        margin-left: 36%;
+    }
+    .container3 .flexkul{   
+        flex-wrap: wrap;    
+    }
+    .container3 .text3{
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    .container3 .kvad2{
+       width: 380px; 
+    }
+}
+
+@media(max-width: 1200px){
+    header .menu{
+        margin-left: 36%;
+    }
+    .container4{    
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    }
+    .container4 .item6{
+        grid-column: 2/3;
+        grid-row: 3/5;
+    }
+    
+    .container4 .item7{
+        grid-column: 1/3;
+        grid-row: 5/6;
+    }
+
+    .container7 .grids{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+    }
+    
+    .container7 .grids .item1{
+        grid-column: 1/4;
+        grid-row: 1/3;   
+        height: 100%;
+    }
+
+    .container7 .grids .item2{
+        grid-column: 1/2;
+        grid-row: 3/4;   
+        height: 100%;
+    }
+
+    .container7 .grids .item3{
+        grid-column: 2/3;
+        grid-row: 3/4;   
+        height: 100%;
+    }
+
+    .container7 .grids .item4{
+        grid-column: 1/2;
+        grid-row: 4/5;   
+        height: 100%;
+    }
+
+    .container7 .grids .item5{
+        grid-column: 2/3;
+        grid-row: 4/5;   
+        height: 100%;
+    }
+
+    .container3 .flexkul{
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .container7 .grids{     
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;  
+    }
+
+
+    /*вторая часть занятия*/
+    .container8 .right_text span{
+        font-size: 20px;
+    }
+    .container8 .left_icons svg:first-child{
+        margin-top: 10px;
+    }
+    .container8 .left_icons svg{
+        margin-left: 5px;
+    }
+}
+
+@media(max-width: 992px){
+    .container8 .left_content{
+        text-align: center;
+    }
+    .container8 .left_icons svg {
+        margin-bottom: 130px;
+        margin-left: -10px;
+    }
+    .container8 .left_content p {
+        margin-bottom: 40px;
+    }
+}
+
+@media(max-width: 768px){
+    .container8 .left_icons svg {
+        margin-left: 20px;
+    }
+}
+
+@media(max-width: 576px){
+    .container8 .left_icons svg {        
+        display: block;
+        margin-left: 10px;
+}
+
 
 
 270 205
