--- a/Пятое задание/style.css
+++ b/Пятое задание/style.css
@@ -324,10 +324,32 @@ header .btn{
     margin-top: 220px;
     margin-bottom: 220px;
 }
-.container5 .planshet{
-    display: block;
-    margin-top: -615px;
+.container5 .ramka{
+    background-image: url("./image/phone.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+.container5 .ramka .planshet {
+    margin-top: 30px;
+    margin-bottom: 80px;
+}
+.container5 .ramka .phone img{
+    margin-top:215px;
+    margin-left: -7px;
+}
+/*.container5 .planshet{
+    display: flex;
+    /*margin-top: -615px;
     margin-left: -5px;
+    background-repeat: no-repeat;
+    background-position-x: 100%;
+    background-size: cover;
+    width: auto;
+    
+}
+<img class="ramka" src="./image/phone.png" alt="ramka">
+.container5 .mobile{
+    display: block;
 }
 
 .container5 .phone .bel{
@@ -335,14 +357,13 @@ header .btn{
     align-items: center;
     flex-direction: column; 
     background-color: #ffffff;
-    height: 345px;
-    width: 213px;
-    margin-top: -430px;
-    margin-left: -6px;
+    max-height: 345px;
+    max-width: 213px;
+    /*margin-top: -430px;
+    margin-left: -6px;*/
+    
 }
-.container5 .bar{
-    flex
-}
+/*
 .container5 .phone .bel .verx_phone{
     height: 15px;
     margin-bottom: 23px;
@@ -383,7 +404,7 @@ header .btn{
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300; 
     margin-left: -120px;    
-}
+}*/
 
 .container5 .right_content h4{
     font-family: 'Ubuntu', sans-serif;
@@ -448,12 +469,9 @@ header .btn{
     height: calc(100vh - 140px);
     background-repeat: no-repeat;
     background-position-x: 100%;
-    background-size: 100%;
-    max-height: 1080px;
-    width: 100% ;
-    min-height: 100px;
-    text-align: center;
-
+    background-size: cover;
+    height: auto;
+    text-align: center;    
 }
 
 .container6 .verx_content h4{
@@ -502,6 +520,7 @@ header .btn{
     border-radius: 30px; 
     text-align: center;  
     margin: 0 auto;
+    margin-bottom: 220px;
 }
 .container6 .center_content .knopka p{
     color:  #333333;
@@ -876,17 +895,70 @@ header .btn{
     .container8 .left_icons svg {
         margin-left: 20px;
     }
-    .container6 .center_content .knopka2 {
-    margin-bottom: 38px;
-    }
     .container6 .center_content .knopka {
         width: 150px;
     }
+    .container5 .right_content h4 {
+        width: auto;
+    }
+    .container5 .right_content .right_text p{
+        width: auto;
+    }
+    .container5 .right_content .ura {
+        width: auto;
+    }
+    .container5 .right_content .right_icon svg {
+        margin-bottom: 105px;
+    }
 }
-
+@media(max-width: 767px){
+    .container6 .center_content .knopka2 {
+    margin-bottom: 38px;
+    }
+    .container5 .right_text .knopka {
+        margin-left: -30px;
+        width: 200px;
+    }
+}
 @media(max-width: 576px){
     .container8 .left_icons svg {        
         display: block;
         margin-left: 10px;
+    }
+    .container6 .center_content p {
+        font-size: 20px;
+    }
+    .container6 .center_content .knopka {
+        margin-bottom: 125px;
+    }
+}
+@media(max-width: 576px){
+    .container5 .right_content .right_icon svg {
+        margin-bottom: 126px;
+    }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="bel">
+                                        <img class="verx_phone" src="./image/verx_phone.png" alt="verx">
+                                        <div class="shadow-lg mb-5 bg-white rounded"><img  class="center_phone" src="./image/mobile.png" alt="center"></div>
+                                        <p class="text1">Starting a Creative Firm in the<br> 
+                                            Age of Digital Marketing</p>
+                                        <span class="text">100 min</span>
+                                        <div class="linia">   
+                                            <span class="line"></span>
+                                            <span class="line2"></span>
+                                        </div>     
+                                        <p class="text0">pause</span>
+                                        </div>
